--- a/HAR/package.json
+++ b/HAR/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sjfricke/HTTP2-Optimization-Research#readme",
   "dependencies": {
-    "chrome-har-capturer": "^0.9.3"
+    "chrome-har-capturer": "^0.9.3",
+    "minimist": "^1.2.0"
   }
 }
