--- a/HAR/package.json
+++ b/HAR/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/sjfricke/HTTP2-Optimization-Research#readme",
   "dependencies": {
     "chrome-har-capturer": "^0.9.3",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "readline-sync": "^1.4.6"
   }
 }
